compiler/testData/diagnostics/tests/controlFlowAnalysis/mainWithWarningOnUnusedParam.kt
// RUN_PIPELINE_TILL: BACKEND
// LANGUAGE: +WarningOnMainUnusedParameter

fun main(<!UNUSED_PARAMETER!>args<!>: Array<String>) {

}

/* GENERATED_FIR_TAGS: functionDeclaration */
